# predictomes_vis

./: .gitattributes  .gitignore  README.md  pyproject.toml
container/: Dockerfile
outputs/ppi_networks/: FDR-dx39b-human-dx39b-human_network.html  peak_score-dx39b-human-dx39b-human.json  peak_score-dx39b-human-dx39b-human_network.html
outputs/predictome_binary_plots/: A1AG2_HUMAN_filtered.csv
predictomes_vis/: __init__.py  cli.py  plot_cli.py
predictomes_vis/predictome_data/: 20251113_download_hsbps.csv  json_metrics_matrix.tsv
predictomes_vis/predictomes_build_ppi_network/: 20251113_download_hsbps.csv  __init__.py  cli.py
